--- a/locales/en.json
+++ b/locales/en.json
@@ -29,7 +29,7 @@
   "form.address": "Address",
   "form.address.desc": "Enter your current address",
   "form.email": "Email address",
-  "form.email.desc": "Enter the email address",
+  "form.email.desc": "Email address",
   "form.expiry": "Expiry date",
   "form.expiry.desc": "eg. 2010-12",
   "form.fullname": "Full name",
@@ -51,5 +51,11 @@
   "caught this error": "caught this error",
   "Cannot read property 'match' of undefined": "Cannot read property 'match' of undefined",
   "Government of Canada": "Government of Canada",
-  "required": "required"
+  "required": "required",
+  "add-form.title": "Add a form",
+  "form.name.desc": "Form name",
+  "form.name.hint": "e.g. PSPC feedback",
+  "form.email.hint": "This is where submitted forms will be sent",
+  "form.redirect.desc": "Redirect URL",
+  "form.redirect.hint": "What URL should the user see after they submit your form?"
 }
