changed some buttons

--- a/locales/en.json
+++ b/locales/en.json
@@ -63,5 +63,6 @@
   "errors.redirect.length": "errors.redirect.length",
   "my-forms.title": "My forms",
   "form.firstname.desc": "form.firstname.desc",
-  "validate.title": "Your email address has been confirmed"
+  "validate.title": "Your email address has been confirmed",
+  "Add form": "Add form"
 }
