--- a/locales/en.json
+++ b/locales/en.json
@@ -15,8 +15,8 @@
   "SMS": "SMS",
   "Skip to main content": "Skip to main content",
   "Yes": "Yes",
-  "app.desc": "Node Starter App",
-  "app.title": "Node Starter App",
+  "app.desc": "Form Sender",
+  "app.title": "Form Sender",
   "confirmation.intro": "Confirmation Intro goes here",
   "confirmation.title": "Confirmation Title",
   "errors.email.length": "Email is required",
@@ -43,10 +43,6 @@
   "personal.intro": "Intro copy goes here",
   "personal.title": "Personal Information",
   "phase.desc": "This site will change as we test ideas.",
-  "start.intro": "What you’ll need to set up notifications:<ul><li>Your information 1</li><li>Your information 2</li></ul>",
-  "start.intro.banner": "This is a demo",
-  "start.submit": "Let's Go",
-  "start.title": "Node Starter App",
   "wordmark.alt": "Symbol of the Government of Canada",
   "caught this error": "caught this error",
   "Cannot read property 'match' of undefined": "Cannot read property 'match' of undefined",
