added simple menu bar that displays username

--- a/locales/en.json
+++ b/locales/en.json
@@ -61,7 +61,6 @@
   "form.firstname.desc": "form.firstname.desc",
   "validate.title": "Your email address has been confirmed",
   "Add form": "Add form",
-  "login.title": "login.title",
-  "login.intro": "login.intro",
+  "login.title": "Form Sender",
   "login": "Sign in"
 }
