changed name to feedback collector

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,8 +15,8 @@
   "SMS": "SMS",
   "Skip to main content": "Skip to main content",
   "Yes": "Yes",
-  "app.desc": "Form Sender",
-  "app.title": "Form Sender",
+  "app.desc": "Feedback Collector",
+  "app.title": "Feedback Collector",
   "confirmation.intro": "Confirmation Intro goes here",
   "confirmation.title": "Confirmation Title",
   "errors.email.length": "Email is required",
@@ -57,7 +57,7 @@
   "form.firstname.desc": "form.firstname.desc",
   "validate.title": "Your email address has been confirmed",
   "Add form": "Add form",
-  "login.title": "Form Sender",
+  "login.title": "Feedback Collector",
   "login": "Sign in",
   "form.redirect": "Should the respondent be redirected to another page after submitting their form?",
   "form.redirect_url.desc": "Redirect URL",
