--- a/locales/en.json
+++ b/locales/en.json
@@ -49,7 +49,6 @@
   "add-form.title": "Add a form",
   "form.name.desc": "Form name",
   "form.name.hint": "e.g. PSPC feedback",
-  "form.email.hint": "This is where submitted forms will be sent",
   "errors.firstname.length": "errors.firstname.length",
   "errors.name.length": "errors.name.length",
   "errors.redirect": "This is required",
@@ -61,5 +60,6 @@
   "login": "Sign in",
   "form.redirect": "Should the respondent be redirected to another page after submitting their form?",
   "form.redirect_url.desc": "Redirect URL",
-  "form.redirect_url.hint": "What URL should the user see after they submit your form?"
+  "form.redirect_url.hint": "What URL should the user see after they submit your form?",
+  "form.email_response": "Would you like responses to your form emailed to you?"
 }
